--- a/app/src/main/res/layout/participant_name.xml
+++ b/app/src/main/res/layout/participant_name.xml
@@ -10,6 +10,7 @@
         android:id="@+id/participant_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:textSize="20sp" />
 
 </LinearLayout>
