--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -11,7 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:text="@string/settings"
         android:textColor="@color/black"
         android:textSize="60sp"
@@ -19,12 +18,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="510dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settings_label"
-        tools:layout_editor_absoluteX="8dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settings_label">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -48,7 +50,7 @@
                     app:layout_constraintTop_toTopOf="@+id/free_color" />
 
                 <TextView
-                    android:id="@+id/filter_description"
+                    android:id="@+id/filter_desc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
@@ -56,9 +58,20 @@
                     android:layout_marginBottom="8dp"
                     android:text="@string/enter_keywords_to_only_display_events_that_contain_those_words"
                     android:textSize="20sp"
-                    app:layout_constraintBottom_toTopOf="@+id/filtering_keywords"
+                    app:layout_constraintBottom_toTopOf="@+id/filtering_keywords_prompt"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/filter_label" />
+
+                <TextView
+                    android:id="@+id/escape_square_password_desc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:text="Set a password to open the settings menu and leave the app via the escape squares"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/password_label" />
 
                 <TextView
                     android:id="@+id/reserved_color_label"
@@ -81,7 +94,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:ems="10"
-                    android:hint="@string/enter_a_hex_number_xxxxxx"
+                    android:hint="@string/hex_prompt"
                     android:inputType="textPersonName"
                     app:layout_constraintEnd_toEndOf="@+id/free_color"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -98,16 +111,16 @@
                     android:textColor="@color/black"
                     android:textSize="40sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/filtering_keywords" />
+                    app:layout_constraintTop_toBottomOf="@+id/filtering_keywords_prompt" />
 
                 <EditText
                     android:id="@+id/free_color"
                     android:layout_width="247dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="56dp"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginTop="12dp"
                     android:ems="10"
-                    android:hint="@string/enter_a_hex_number_xxxxxx"
+                    android:hint="@string/hex_prompt"
                     android:inputType="textPersonName"
                     app:layout_constraintStart_toEndOf="@+id/free_color_label"
                     app:layout_constraintTop_toBottomOf="@+id/status_page_colors" />
@@ -141,7 +154,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="8dp"
                     android:text="@string/status_page_colors"
                     android:textColor="@color/black"
                     android:textSize="25sp"
@@ -149,7 +162,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/color_label" />
 
                 <EditText
-                    android:id="@+id/filtering_keywords"
+                    android:id="@+id/filtering_keywords_prompt"
                     android:layout_width="556dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
@@ -161,15 +174,16 @@
                     app:layout_constraintTop_toBottomOf="@+id/filter_label" />
 
                 <EditText
-                    android:id="@+id/editText2"
+                    android:id="@+id/password_prompt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:ems="10"
+                    android:hint="Enter a password"
                     android:inputType="textPassword"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/password_label" />
+                    app:layout_constraintTop_toBottomOf="@+id/escape_square_password_desc" />
             </android.support.constraint.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
