Lots of code and docs cleanup, as well as many bugfixes.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFF</color>
 
 
-    <color name="event_color_01">#59dbe0</color>
+    <color name="event_color_01">#296ba0</color>
     <color name="event_color_02">#f57f68</color>
     <color name="event_color_03">#87d288</color>
     <color name="event_color_04">#f8b552</color>
